--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
   <title>Checklist Operacional RPAS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ PWA / iOS -->
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#000000">
-
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Checklist RPAS">
-
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
+  <!-- PWA -->
+  <meta name="theme-color" content="#0b1115" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
 
   <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -35,11 +30,6 @@
 
   <!-- SPLASH -->
   <section id="splash" class="screen active">
-    <img
-      src="assets/logos/noarp.png"
-      alt="NOARP"
-      style="display:block;margin:10px auto 14px auto;width:72%;max-width:260px;height:auto;"
-    >
     <h1>Checklist Operacional RPAS</h1>
     <p class="subtitle">COARP · NOARP · SAER · PCSC</p>
     <button id="startBtn">Iniciar Checklist</button>
@@ -200,7 +190,10 @@
     </p>
 
     <form id="signatureForm">
-      <label for="operatorNotes">Observações discricionárias do operador (opcional)</label>
+
+      <label for="operatorNotes">
+        Observações discricionárias do operador (opcional)
+      </label>
       <textarea
         id="operatorNotes"
         placeholder="Descreva aqui qualquer observação relevante sobre a missão, intercorrências ou encerramento."
@@ -208,15 +201,29 @@
         class="form-input"
       ></textarea>
 
-      <input id="signatureName" placeholder="Nome do Operador" required class="form-input">
-      <input id="signatureId" placeholder="Matrícula Funcional" required class="form-input">
+      <input
+        id="signatureName"
+        placeholder="Nome do Operador"
+        required
+        class="form-input"
+      >
+
+      <input
+        id="signatureId"
+        placeholder="Matrícula Funcional"
+        required
+        class="form-input"
+      >
 
       <label class="signature-check">
         <input type="checkbox" id="signatureConfirm" required>
         Confirmo a veracidade das informações
       </label>
 
-      <button type="submit">Assinar e Gerar PDF</button>
+      <button type="submit">
+        Assinar e Gerar PDF
+      </button>
+
     </form>
   </section>
 
@@ -229,8 +236,7 @@
     </p>
 
     <form id="earlyEndForm">
-      <textarea
-        id="earlyEndReason"
+      <textarea id="earlyEndReason"
         placeholder="Descreva o motivo do encerramento antecipado"
         rows="5"
         required></textarea>
@@ -248,6 +254,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="js/app.js"></script>
+
 <script>
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
