--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>Checklist Operacional RPAS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
   <link rel="stylesheet" href="css/style.css" />
 
-  <!-- iOS Home Screen -->
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
+  <!-- PWA (geral) -->
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- iOS: abrir como app (sem barra) quando instalado -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="Checklist RPAS" />
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
 </head>
 
 <body>
@@ -31,7 +38,6 @@
 
   <!-- SPLASH -->
   <section id="splash" class="screen active">
-    <!-- LOGO GRANDE NOARP (somente na primeira página) -->
     <img
       src="assets/logos/noarp.png"
       alt="NOARP"
