--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   </div>
   <div class="header-right">
     <a
-      href="https://github.com/leaphar1979/checklist-rpas/blob/main/README.md"
-      target="_blank"
+      href="sobre.html"
       class="header-link"
       rel="noopener"
     >📘 Sobre / Doutrina</a>
